--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "run-sequence": "1.1.4",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
+  },
+  {
+    "overrides": {
+      "graceful-fs": "^4.2.11"
+    }
   }
 }
