--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.1.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-docker": "cd containers && docker-compose up -d && cd .. && node ./bin/www"
   },
   "contributors": [
     "Chris Dickson <cdickson@uncharted.software>",
     "Kevin Birk <kbirk@uncharted.software>",
-	"Alex74747 <alex74747dev@proton.me>"
+    "Alex74747 <alex74747dev@proton.me>"
   ],
   "dependencies": {
     "async": "1.4.2",
